counter service, endpoints. added graceful shutdown
